--- a/geometric_approach.ipynb
+++ b/geometric_approach.ipynb
@@ -34,6 +34,7 @@
     "\n",
     "import sys\n",
     "\n",
+    "sys.path.append(\"/home/nstillman/0_miscellaneous/sbi_model1\")\n",
     "sys.path.append('/home/nstillman/1_sbi_activematter/cpp_model')\n",
     "import allium"
    ]
