adding a simple model + train test and  graph associated

--- a/geometric_approach.ipynb
+++ b/geometric_approach.ipynb
@@ -10,12 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gille\\miniconda3\\envs\\geom\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch_geometric\n",
     "import torch\n",
+    "\n",
+    "from torch.optim.lr_scheduler import CosineAnnealingWarmRestarts\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -33,10 +44,11 @@
     "import time\n",
     "\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "sys.path.append(\"/home/nstillman/0_miscellaneous/sbi_model1\")\n",
     "sys.path.append('/home/nstillman/1_sbi_activematter/cpp_model')\n",
-    "import allium"
+    "#import allium"
    ]
   },
   {
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +86,10 @@
     "\"\"\"\n",
     "\n",
     "class CellGraphDataset(Dataset):\n",
-    "    def __init__(self, root, transform=None, pre_transform=None, pre_filter=None):\n",
+    "    def __init__(self, root, max_size, transform=None, pre_transform=None, pre_filter=None):\n",
     "        super().__init__(root, transform, pre_transform, pre_filter)\n",
+    "        \n",
+    "        self.paths = self.each_path(root, max_size)\n",
     "        \n",
     "    def _download(self):\n",
     "        pass\n",
@@ -83,11 +97,24 @@
     "    def _process(self):\n",
     "        pass\n",
     "\n",
-    "    @property\n",
-    "    def each_path(self):\n",
-    "        relative = [s.replace('\\\\', '/') for s in glob.glob(str(self.root) + '/*fast4p.p*')]\n",
-    "        absolute = [osp.abspath(s) for s in relative]\n",
-    "        return absolute\n",
+    "    class each_path():\n",
+    "        def __init__(self, root, max_size):\n",
+    "            self.root = root\n",
+    "            self.max_size = max_size\n",
+    "            self._each_path = self.read()\n",
+    "            \n",
+    "        def read(self):\n",
+    "            relative = [s.replace('\\\\', '/') for s in glob.glob(str(self.root) + '/*fast4p.p*')]\n",
+    "            max_size = max(self.max_size, len(relative))\n",
+    "            relative = relative[:max_size]\n",
+    "            absolute = [osp.abspath(s) for s in relative]\n",
+    "            return absolute\n",
+    "\n",
+    "        def fset(self, value):\n",
+    "            self._each_path = value\n",
+    "        \n",
+    "        def fget(self):\n",
+    "            return self._each_path\n",
     "        \n",
     "    def process_file(self, path):\n",
     "        print(path)\n",
@@ -120,30 +147,46 @@
     "\n",
     "\n",
     "        #ideally we would like to only have those connections but radius_graph doesn't work on GPU for some reason\n",
-    "        #edges = radius_graph(pos, r=cutoff, batch=None, loop=False, max_num_neighbors=100)\n",
+    "        edge_index = torch.tensor([radius_graph(rval[t], r=cutoff, batch=None, loop=False, max_num_neighbors=100) for t in range(T)])\n",
     "        \n",
     "        #though for now we will make a completely connected graph\n",
-    "        edges = torch.tensor([[i,j] for i in range(N) for j in range(N) if i!=j]).t()\n",
+    "        #edges = torch.tensor([[i,j] for i in range(N) for j in range(N) if i!=j]).t()\n",
     "        \n",
     "        #distance between nodes where rval[t, i, :] is the position of cell i at time t\n",
-    "        edges_attr =  torch.tensor([np.linalg.norm(rval[t, i, :] - rval[t, j, :]) for t in range(T) for i in range(N) for j in range(N) if i!=j]).reshape(T, -1).t()\n",
+    "        edges_attr =  torch.tensor([torch.norm(rval[t, edge_index[t, 0, :], :] - rval[t, edge_index[t, 1, :], :], dim=1) for t in range(T)])\n",
+    "        \n",
+    "        #we will add to rval dx and dy to get the velocity\n",
+    "        rval = torch.cat((rval, torch.zeros((T, N, 2))), dim=2)\n",
+    "        for t in range(T-1):\n",
+    "            rval[t+1, :, 2:4] = rval[t+1, :, :2] - rval[t, :, :2]\n",
+    "\n",
+    "        return rval, edge_index, edges_attr\n",
     "\n",
     "        #construction of the graph\n",
-    "        geom = [Data(x=torch.tensor(rval[t, :, :]), edge_index=edges, edge_attr=edges_attr[t, :]) for t in range(T)]\n",
+    "        geom = [Data(x=torch.tensor(rval[t, :, :]), edge_index=edge_index, edge_attr=edges_attr[t, :]) for t in range(T)]\n",
     "\n",
     "        #save the list of graphs\n",
     "        return geom\n",
     "    \n",
     "    def len(self):\n",
-    "        return len(self.each_path)\n",
+    "        return len(self.paths.fget())\n",
     "\n",
     "    def get(self, idx):\n",
-    "        data = self.process_file(self.each_path[idx])"
+    "        data = self.process_file(self.paths.fget()[idx])\n",
+    "        \n",
+    "    def dump_source(self, path):\n",
+    "        with open(path, 'wb') as f:\n",
+    "            pickle.dump(self.paths.fget(), f)\n",
+    "            \n",
+    "    def overwrite_source(self, path):\n",
+    "        with open(path, 'rb') as f:\n",
+    "            #set the property to the new list of paths\n",
+    "            self.paths.fset(pickle.load(f))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,27 +200,56 @@
     }
    ],
    "source": [
-    "#data = CellGraphDataset(root='/scratch/users/nstillman/data-cpp/train/')\n",
-    "data_train = CellGraphDataset(root='../data/train/')\n",
+    "path = \"data/\" #local\n",
+    "#path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
+    "\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=36)\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
-    "data_test = CellGraphDataset(root='../data/test/')\n",
+    "data_test = CellGraphDataset(root=path + 'test', max_size=10)\n",
     "print(\"Test data length : \", data_test.len())\n",
     " \n",
-    "data_val = CellGraphDataset(root='../data/valid/')\n",
+    "data_val = CellGraphDataset(root=path + 'valid', max_size=10)\n",
     "print(\"Validation data length : \", data_val.len())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"sources\" not in os.listdir():\n",
+    "    os.mkdir(\"sources\")\n",
+    "\n",
+    "if \"train_paths.pkl\" not in os.listdir(\"sources\"):\n",
+    "    #first time running, dump the paths to a pickle file\n",
+    "    data_train.dump_source(\"sources/train_paths.pkl\")\n",
+    "else :\n",
+    "    #overwrite the paths to the previous configuration\n",
+    "    data_train.overwrite_source(\"sources/train_paths.pkl\")\n",
+    "    \n",
+    "if \"test_paths.pkl\" not in os.listdir(\"sources\"):\n",
+    "    data_test.dump_source(\"sources/test_paths.pkl\")\n",
+    "else :\n",
+    "    data_test.overwrite_source(\"sources/test_paths.pkl\")\n",
+    "    \n",
+    "if \"val_paths.pkl\" not in os.listdir(\"sources\"):\n",
+    "    data_val.dump_source(\"sources/val_paths.pkl\")\n",
+    "else :\n",
+    "    data_val.overwrite_source(\"sources/val_paths.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gille\\Desktop\\data\\train\\p000_r000_sb000_2147955_b045_fast4p.p\n"
+      "c:\\Users\\gille\\Desktop\\graph-displacement\\data\\train\\p000_r000_sb000_2147955_b045_fast4p.p\n"
      ]
     },
     {
@@ -187,15 +259,238 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[69], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m data_train\u001b[39m.\u001b[39;49mget(\u001b[39m0\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[67], line 84\u001b[0m, in \u001b[0;36mCellGraphDataset.get\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, idx):\n\u001b[1;32m---> 84\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocess_file(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49meach_path[idx])\n",
-      "Cell \u001b[1;32mIn[67], line 39\u001b[0m, in \u001b[0;36mCellGraphDataset.process_file\u001b[1;34m(self, path)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[39mif\u001b[39;00m path\u001b[39m.\u001b[39mendswith(\u001b[39m\"\u001b[39m\u001b[39m.p\u001b[39m\u001b[39m\"\u001b[39m) :\n\u001b[0;32m     38\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m---> 39\u001b[0m         x \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39;49mload(f, fix_imports\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m     41\u001b[0m \u001b[39mif\u001b[39;00m path\u001b[39m.\u001b[39mendswith(\u001b[39m\"\u001b[39m\u001b[39m.pz\u001b[39m\u001b[39m\"\u001b[39m) :\n\u001b[0;32m     42\u001b[0m     \u001b[39mwith\u001b[39;00m lzma\u001b[39m.\u001b[39mopen(path, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m data_train\u001b[39m.\u001b[39;49mget(\u001b[39m0\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[2], line 99\u001b[0m, in \u001b[0;36mCellGraphDataset.get\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, idx):\n\u001b[1;32m---> 99\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocess_file(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpaths\u001b[39m.\u001b[39;49mfget()[idx])\n",
+      "Cell \u001b[1;32mIn[2], line 54\u001b[0m, in \u001b[0;36mCellGraphDataset.process_file\u001b[1;34m(self, path)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[39mif\u001b[39;00m path\u001b[39m.\u001b[39mendswith(\u001b[39m\"\u001b[39m\u001b[39m.p\u001b[39m\u001b[39m\"\u001b[39m) :\n\u001b[0;32m     53\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m---> 54\u001b[0m         x \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39;49mload(f)\n\u001b[0;32m     56\u001b[0m \u001b[39mif\u001b[39;00m path\u001b[39m.\u001b[39mendswith(\u001b[39m\"\u001b[39m\u001b[39m.pz\u001b[39m\u001b[39m\"\u001b[39m) :\n\u001b[0;32m     57\u001b[0m     \u001b[39mwith\u001b[39;00m lzma\u001b[39m.\u001b[39mopen(path, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'allium'"
      ]
     }
    ],
    "source": [
     "data = data_train.get(0)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we need to define the model that will be used :\n",
+    "    > input \n",
+    "        (1) Graph at a particular time t (nodes having x,y,dx,dy as attributes)\n",
+    "        (2) Graphs up to a particular time [t-a, t] (nodes having x,y as attributes)\n",
+    "    > output\n",
+    "        (a) Graph at the immediate next time step t+1\n",
+    "        (b) Graph [t, t+b]\n",
+    "        (c) Graph at t+b\n",
+    "    > graph size\n",
+    "        (x) Fixed graph size to the most nodes possible (or above)\n",
+    "        (y) Unbounded graph size\n",
+    "            >> idea : graph walks\n",
+    "            >> idea : sampler"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following model will do (1ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.nn import GATv2Conv\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class GraphEvolution(torch.nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, hidden_channels, heads, dropout=0.0):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        #we want the channels to be (x, y, vx, vy)\n",
+    "        if (in_channels != out_channels):\n",
+    "            raise ValueError(\"in_channels must be equal to out_channels\")\n",
+    "        \n",
+    "        self.conv  = GATv2Conv(in_channels, hidden_channels, heads=heads, dropout=dropout)\n",
+    "        self.post = torch.nn.Linear(heads*hidden_channels, out_channels)\n",
+    "\n",
+    "    def forward(self, x, edge_index, edge_attr):\n",
+    "        #x is a tensor of shape (T, N, in_channels)\n",
+    "        #for each time step, we will predict the next time step\n",
+    "        #the last one is empty and will be filled with the prediction\n",
+    "        \n",
+    "        #the edge_attr is a tensor of shape (T, E)\n",
+    "        #where E is the number of edges\n",
+    "        \n",
+    "        #edge_index is a tensor of shape (T, 2, E)\n",
+    "        \n",
+    "        #if this worked it would be great\n",
+    "        #y = self.conv(x, edge_index, edge_attr)\n",
+    "\n",
+    "        #here T is treated as a batch dimension\n",
+    "        for i in range(0, x.shape[0]):\n",
+    "            # x[i] is a tensor of shape (N, in_channels)\n",
+    "            y = self.conv(x[i], edge_index[i], edge_attr[i])\n",
+    "            # y is a tensor of shape (N, heads*hidden_channels)\n",
+    "            y = F.elu(y)\n",
+    "            # different nodes will be considered as batches\n",
+    "            y = self.post(y)\n",
+    "            # y is a tensor of shape (N, out_channels)\n",
+    "            x[i] = y + x[i]\n",
+    "            \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global losses\n",
+    "losses = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def test(model, data, device) :\n",
+    "    model.eval()\n",
+    "    model = model.to(device)\n",
+    "    with torch.no_grad():\n",
+    "        loss_sum = 0\n",
+    "        for i in range(data.len()):\n",
+    "            x, edge_index, edge_attr = data.get(i)\n",
+    "            \n",
+    "            random_number = random.randint(1, x.shape[0]-2)\n",
+    "            \n",
+    "            xshape = x.shape\n",
+    "            \n",
+    "            y = x[random_number+1].to(device)\n",
+    "            x = x[random_number].to(device)\n",
+    "            ei = edge_index[random_number].to(device)\n",
+    "            ea = edge_attr[random_number].to(device)\n",
+    "            \n",
+    "            out = model(x.unsqueeze(0), ei.unsqueeze(0), ea.unsqueeze(0))\n",
+    "            \n",
+    "            loss = F.mse_loss(out, y.unsqueeze(0))\n",
+    "            \n",
+    "            loss_sum = loss_sum + loss.item()\n",
+    "            \n",
+    "        return loss_sum / data.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, optimizer, scheduler, data, device) :\n",
+    "    model.train()\n",
+    "    model = model.to(device)\n",
+    "    for i in range(data.len()):\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        x, edge_index, edge_attr = data.get(i)\n",
+    "        \n",
+    "        x = x.to(device)\n",
+    "        edge_index = edge_index.to(device)\n",
+    "        edge_attr = edge_attr.to(device)\n",
+    "        \n",
+    "        #we don't want to predict the last step since we wouldn't have the data for the loss\n",
+    "        #and for the first point we don't have the velocity\n",
+    "        out = model(x[1:-1], edge_index[1:-1], edge_attr[1:-1])\n",
+    "        \n",
+    "        loss = F.mse_loss(out, x[2:])\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        scheduler.step(i)\n",
+    "        \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start(model, optimizer, scheduler, data_train, data_test, device, epoch):\n",
+    "    for e in range(epoch):\n",
+    "        model = train(model, optimizer, scheduler, data_train, device)\n",
+    "            \n",
+    "        test_loss = test(model, data_test, device)\n",
+    "        \n",
+    "        print(\"Epoch : \", e, \"Test loss : \", test_loss)\n",
+    "        \n",
+    "        losses.append(test_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GraphEvolution(4, 4, 32, 8, 0.0)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class GraphingLoss():\n",
+    "    def __init__(self):\n",
+    "        self.losses = []\n",
+    "        self.stop = False\n",
+    "        self.timer = 0\n",
+    "\n",
+    "    def plot_and_reschedule(self):\n",
+    "        plt.plot(losses)\n",
+    "        plt.show()\n",
+    "        if not self.stop:\n",
+    "            threading.Timer(self.timer, self.plot_and_reschedule).start()\n",
+    "            \n",
+    "    def gstop(self):\n",
+    "        self.stop = True\n",
+    "        \n",
+    "    def gstart(self, timer=10):\n",
+    "        self.timer = timer\n",
+    "        if (not self.timer or self.timer != int(self.timer)):\n",
+    "            raise ValueError(\"timer must be a positive integer\")\n",
+    "        \n",
+    "        threading.Timer(self.timer, self.plot_and_reschedule).start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 100\n",
+    "grapher = GraphingLoss()\n",
+    "gstart = grapher.gstart(10)\n",
+    "start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", epochs)"
    ]
   }
  ],
@@ -215,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:33) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
