adding some attributes  to edges

--- a/geometric_approach.ipynb
+++ b/geometric_approach.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No module named 'pycapmd'\n",
+      "Cannot import simulator\n"
+     ]
+    }
+   ],
    "source": [
     "import torch_geometric\n",
     "import torch\n",
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
     "\"\"\"\n",
     "\n",
     "class CellGraphDataset(Dataset):\n",
-    "    def __init__(self, root, max_size, transform=None, pre_transform=None, pre_filter=None, rdts=False):\n",
+    "    def __init__(self, root, max_size, transform=None, pre_transform=None, pre_filter=None, rdts=False, version=\"v1\"):\n",
     "        super().__init__(root, transform, pre_transform, pre_filter)\n",
     "        \n",
     "        #path to all the files\n",
@@ -86,6 +95,11 @@
     "        \n",
     "        #eandom time-step : reads at random in each file the time-step\n",
     "        self.rdts = rdts\n",
+    "        \n",
+    "        #keeping track of tests\n",
+    "        self.version = version\n",
+    "        \n",
+    "        assert(self.version in (\"v1, v2\"))\n",
     "        \n",
     "    def _download(self):\n",
     "        pass\n",
@@ -138,7 +152,7 @@
     "        rval = torch.tensor(x.rval)\n",
     "        #Get time and number of cells from shape of position data\n",
     "        old_T = rval.shape[0]\n",
-    "        T = min(rval.shape[0], 5) #limiting for testing\n",
+    "        T = min(rval.shape[0], 20) #limiting for testing\n",
     "        N = rval.shape[1]\n",
     "        \n",
     "        try :\n",
@@ -146,13 +160,12 @@
     "            assert(N > 1)\n",
     "        except :\n",
     "            raise Exception(\"Data unfit for use\")\n",
-    "        \n",
+    "            \n",
     "        if not self.rdts :\n",
     "            rval = rval[:T, :N, :2]\n",
     "        else : \n",
     "            rd = random.randint(0, old_T - T)\n",
     "            rval = rval[rd:rd+T, :N, :2]\n",
-    "            \n",
     "\n",
     "        rval = rval.reshape(T*N,2)\n",
     "        #ideally we would like to only have those connections but radius_graph doesn't work on GPU for some reason\n",
@@ -180,7 +193,28 @@
     "            assert(batch_edge.shape[0] == edge_attr.shape[0])\n",
     "        except : \n",
     "            raise Exception(\"Data processing went wrong\")\n",
+    "        \n",
+    "        if self.version == \"v1\" :\n",
+    "            return rval.to(torch.float), edge_index.to(torch.long), edge_attr.to(torch.float), batch_edge.to(torch.long)\n",
+    "        \n",
+    "        #we will also add the degree of the first node of the pair\n",
+    "        #degree of each node\n",
+    "        deg = torch.zeros((T, N))\n",
+    "        edge_index_local = torch.zeros_like(edge_index)\n",
+    "        for t in range(T):\n",
+    "            edge_index_local[:, batch_edge == t] = edge_index[:, batch_edge == t] - N*t\n",
+    "            deg[t, :] = torch.bincount(edge_index_local[0, batch_edge == t], minlength=N)\n",
     "            \n",
+    "        #degree of the first node of the pair\n",
+    "        deg = deg.reshape(T*N)\n",
+    "        edge_attr = torch.cat((edge_attr.reshape(-1, 1), deg[edge_index[0, :]].reshape(-1, 1)), dim=1)\n",
+    "        \n",
+    "        #also the difference of velocities\n",
+    "        edge_attr = torch.cat((edge_attr, torch.zeros_like(edge_attr)), dim = 1)\n",
+    "        for t in range(T):\n",
+    "            edge_attr[batch_edge == t, 2] = rval[t, edge_index_local[0, batch_edge == t], 2] - rval[t, edge_index_local[1, batch_edge == t], 2]\n",
+    "            edge_attr[batch_edge == t, 3] = rval[t, edge_index_local[0, batch_edge == t], 3] - rval[t, edge_index_local[1, batch_edge == t], 3]\n",
+    "        \n",
     "        return rval.to(torch.float), edge_index.to(torch.long), edge_attr.to(torch.float), batch_edge.to(torch.long)\n",
     "    \n",
     "    def len(self):\n",
@@ -201,26 +235,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data length :  50\n",
+      "Test data length :  15\n",
+      "Validation data length :  15\n"
+     ]
+    }
+   ],
    "source": [
     "#path = \"data/\" #local\n",
     "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
     "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=50, rdts=True)\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=50, rdts=True, version=\"v2\")\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
-    "data_test = CellGraphDataset(root=path + 'test', max_size=15)\n",
+    "data_test = CellGraphDataset(root=path + 'test', max_size=15, version=\"v2\")\n",
     "print(\"Test data length : \", data_test.len())\n",
     " \n",
-    "data_val = CellGraphDataset(root=path + 'valid', max_size=15)\n",
+    "data_val = CellGraphDataset(root=path + 'valid', max_size=15, version=\"v2\")\n",
     "print(\"Validation data length : \", data_val.len())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,14 +337,21 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class GraphEvolution(torch.nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, hidden_channels, heads, dropout=0.0):\n",
+    "    def __init__(self, in_channels, out_channels, hidden_channels, heads, dropout=0.0, version=\"v1\"):\n",
     "        super().__init__()\n",
     "        \n",
     "        #we want the channels to be (x, y, vx, vy)\n",
     "        assert(in_channels == out_channels)\n",
     "        \n",
-    "        self.conv  = GATv2Conv(in_channels, hidden_channels, heads=heads, dropout=dropout, edge_dim=1, fill_value=0.)\n",
-    "        self.post = torch.nn.Linear(heads*hidden_channels, out_channels)\n",
+    "        assert(version in (\"v1\", \"v2\"))\n",
+    "        \n",
+    "        if version == \"v1\" :\n",
+    "            self.conv  = GATv2Conv(in_channels, hidden_channels, heads=heads, dropout=dropout, edge_dim=1, fill_value=-1.)\n",
+    "        else : \n",
+    "            self.conv  = GATv2Conv(in_channels, hidden_channels, heads=heads, dropout=dropout, edge_dim=4, fill_value=-1.)\n",
+    "            \n",
+    "        self.post = torch.nn.Linear(heads*hidden_channels, hidden_channels)\n",
+    "        self.post2 = torch.nn.Linear(hidden_channels, out_channels)\n",
     "\n",
     "    def forward(self, x, edge_index, edge_attr):\n",
     "        #x is a tensor of shape (T, N, in_channels)\n",
@@ -311,8 +362,6 @@
     "\n",
     "        #edge_index is a tensor of shape between (2, 1) and (2, T*N)\n",
     "        \n",
-    "        #if this worked it would be great\n",
-    "        #y = self.conv(x, edge_index, edge_attr)\n",
     "        xshape = x.shape\n",
     "        x = x.reshape(xshape[0]*xshape[1], 4)\n",
     "\n",
@@ -324,13 +373,15 @@
     "        # different nodes will be considered as batches\n",
     "        y = self.post(y)\n",
     "        # y is a tensor of shape (N*T, out_channels)\n",
+    "        y = F.elu(y)\n",
+    "        y = self.post2(y) \n",
     "            \n",
-    "        return y.reshape(xshape)"
+    "        return y.reshape(xshape) + x.reshape(xshape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,11 +425,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, optimizer, scheduler, data, device) :\n",
+    "def train(model, optimizer, scheduler, data, device, epoch) :\n",
     "    model.train()\n",
     "    model = model.to(device)\n",
     "    for i in range(data.len()):\n",
@@ -406,7 +457,7 @@
     "        \n",
     "        optimizer.step()\n",
     "        \n",
-    "        scheduler.step(i)\n",
+    "        scheduler.step(epoch + i / data.len())\n",
     "        \n",
     "        \n",
     "        print(\"Current loss : \" + str(loss.item()) + \" ... \" + str(i) + \"/\" + str(data.len()) + \"         \", end=\"\\r\")\n",
@@ -416,13 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def start(model, optimizer, scheduler, data_train, data_test, device, epoch, save):\n",
+    "def start(model, optimizer, scheduler, data_train, data_test, device, epoch, save=0, early_stop=False):\n",
     "    for e in range(epoch):\n",
-    "        model = train(model, optimizer, scheduler, data_train, device)\n",
+    "        model = train(model, optimizer, scheduler, data_train, device, e)\n",
     "            \n",
     "        test_loss = test(model, data_test, device)\n",
     "        \n",
@@ -430,14 +481,32 @@
     "        \n",
     "        losses.append(test_loss)\n",
     "        \n",
-    "        if (save and epoch%save == 0) :\n",
+    "        if early_stop and len(losses) > 15 :\n",
+    "            recent_losses = min(len(losses), 30)\n",
+    "            y = losses[-recent_losses:]\n",
+    "            \n",
+    "            axis = np.arange(recent_losses)\n",
+    "            A = np.vstack([axis, np.ones(len(axis))]).T\n",
+    "            \n",
+    "            a = np.linalg.lstsq(A, y, rcond=None)\n",
+    "            \n",
+    "            if a[0][0] >= -0.002 :\n",
+    "                print(\"Early stopping : recent slope at \", a[0][0])\n",
+    "                if (save) :\n",
+    "                    with open(model_path, 'wb') as f:\n",
+    "                        pickle.dump(model, f)\n",
+    "                return\n",
+    "            else : \n",
+    "                print(\"Early stopping passed : current slope at \", a[0][0])\n",
+    "        \n",
+    "        if (save and e%save == 0) :\n",
     "            with open(model_path, 'wb') as f:\n",
-    "                pickle.dump(f, model)"
+    "                pickle.dump(model, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,17 +515,17 @@
     "    with open(model_path, 'rb') as f:\n",
     "        model = pickle.load(f)\n",
     "else :\n",
-    "    model = GraphEvolution(4, 4, 32, 8, 0.0)\n",
+    "    model = GraphEvolution(4, 4, 32, 8, 0.0, version=\"v2\")\n",
     "    \n",
     "assert isinstance(model, GraphEvolution)\n",
     "    \n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.001)\n",
     "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,13 +573,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  0 Test loss :  3.0424984067057568            \n",
+      "Epoch :  1 Test loss :  3.5483325531706216            \n",
+      "Epoch :  2 Test loss :  2.4284801803529263            \n",
+      "Epoch :  3 Test loss :  1.3993390306209526            \n",
+      "Epoch :  4 Test loss :  2.2380443626393873            \n",
+      "Epoch :  5 Test loss :  2.1763801138537624            \n",
+      "Epoch :  6 Test loss :  2.9198967424531777            \n",
+      "Epoch :  7 Test loss :  2.183614840482672             \n",
+      "Current loss : 0.0987463966012001 ... 12/50          \r"
+     ]
+    }
+   ],
    "source": [
-    "epochs = 101\n",
+    "epochs = 501\n",
     "grapher = GraphingLoss()\n",
     "try :\n",
     "    grapher.gstart(10)\n",
-    "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", epochs, save=10)\n",
+    "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", epochs, save=10, early_stop = True)\n",
     "finally :\n",
     "    grapher.gstop()"
    ]
@@ -520,14 +605,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#things to do :\n",
+    "    #normalize the inputs \n",
+    "    #preload the inputs\n",
+    "    #test on GPU\n",
+    "    #make sure this model doesn't use past times (normally should not since the graph is disconnected and it's based on message passing)\n",
+    "    #maybe add even more statistics to edges but idk what to put\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "geom",
+   "display_name": "Python [conda env:geom]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-geom-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -539,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:33) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
